fix: return value response model with pagination